# Project-Kisan

./: .env_example  .gitignore  Dockerfile  README.md  ai_companion.db  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
.kiro/specs/kisan-platform-overhaul/: .config.kiro  design.md  requirements.md  tasks.md
Database/: database.py  models.py
backend/: main.py
backend/core/: auth.py  config.py
backend/routers/: auth.py  chat.py  user.py
backend/schemas/: schemas.py
backend/utils/: db_utils.py
data2/: chat_history.db
evaluation/: __init__.py  evaluators.py  run_eval.py  test_setup.py
evaluation/datasets/: test_cases.json
frontend/: chat.html  index.html  login.html  signup.html
frontend/css/: style.css
frontend/js/: api.js  auth.js  chat.js
krishi-shayak-frontend/: index.html
krishi-shayak-frontend/css/: styles.css
krishi-shayak-frontend/js/: app.js
src/ai_component/: config.py  exception.py  llm.py
src/ai_component/core/: prompts.py  schedules.py
src/ai_component/graph/: edges.py  graph.py  nodes.py  state.py
src/ai_component/graph/utils/: chains.py
src/ai_component/modules/memory/: memory_manager.py  test_vector_store_pii.py  vector_store.py
src/ai_component/modules/schedule/: context_generation.py
src/ai_component/tools/: all_tools.py  call_tool.py  gov_scheme_tool.py  mandi_report_tool.py  rag_tool.py  weather_tool.py  web_seach_tool.py
src/backend/: main.py
src/backend/core/: auth.py  config.py
src/backend/routers/: auth.py  chat.py  user.py
src/backend/schemas/: schemas.py
src/database/: database.py  models.py
