[project]
name = "project-kisan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "langchain>=0.3.26",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.68",
    "langchain-google-genai>=2.1.6",
    "langchain-groq>=0.3.5",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.5.1",
    "project-kisan",
    "pydantic>=2.11.7",
    "pypdf>=5.7.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
]

[tool.uv.sources]
project-kisan = { workspace = true }
